// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/presence/PresenceLink render() should change the flyoutPosition 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isResponsive={false}
  isVisibleByDefault={false}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-right"
>
  <div
    className="presence-link-container"
    data-resin-feature="presence"
  >
    <PlainButton>
      Others
    </PlainButton>
  </div>
  <Overlay
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        [
          {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
          {
            "avatarUrl": "",
            "id": "6",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": true,
            "name": "f",
          },
        ]
      }
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/PresenceLink render() should correctly render collaborators when number of collaborators is greater or equal to 1 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isResponsive={false}
  isVisibleByDefault={false}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-right"
>
  <div
    className="presence-link-container"
  >
    <PlainButton>
      Others
    </PlainButton>
  </div>
  <Overlay
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        [
          {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
          {
            "avatarUrl": "",
            "id": "6",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": true,
            "name": "f",
          },
        ]
      }
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/PresenceLink render() should correctly render empty state 1`] = `""`;

exports[`features/presence/PresenceLink render() should pass through additional attributes when specified 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isResponsive={false}
  isVisibleByDefault={false}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={[]}
  position="bottom-right"
>
  <div
    className="presence-link-container"
    data-resin-feature="presence"
  >
    <PlainButton>
      Others
    </PlainButton>
  </div>
  <Overlay
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        [
          {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
          {
            "avatarUrl": "",
            "id": "6",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": true,
            "name": "f",
          },
        ]
      }
    />
  </Overlay>
</Flyout>
`;
